--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h1 {
     position: absolute;
     width: 100%;
     height: 100%;
+    /* backface visibilty determines wheter the back side of an element is visoble r not when it is rotated */
     backface-visibility: hidden;
     border: 2px solid #333;
     border-radius: 10px;
@@ -61,4 +62,43 @@ h1 {
     padding: 10px 20px;
     font-size: 1em;
     cursor: pointer;
+} 
+
+
+.win-message {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.9); 
+    padding: 20px;
+    border-radius: 10px;
+    color: white;
+    font-size: 2rem;
+    text-align: center;
+    display: none; 
+    opacity: 0;
 }
+
+
+@keyframes winAnimation {
+    0% {
+        transform: translate(-50%, -50%) scale(0);
+        opacity: 0;
+    }
+    50% {
+        transform: translate(-50%, -50%) scale(1.2);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(-50%, -50%) scale(1);
+        opacity: 1;
+    }
+}
+
+.win-message.show {
+    display: block; 
+    animation: winAnimation 1.5s ease-out forwards; 
+}
+
+
